--- a/abstract/styles/large.css
+++ b/abstract/styles/large.css
@@ -6,6 +6,10 @@
         --button-color:#4C5FD5;
     }
 
+    #menu {
+        display: none;
+    }
+
     #sections {
         display: grid;
         grid-template-columns: 1fr 1fr;
