--- a/abstract/styles/base.css
+++ b/abstract/styles/base.css
@@ -43,7 +43,12 @@ header {
     padding-left: 40px;
     padding-right: 40px;
 }
-
+.buttons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+}
 .title {
     display: flex;
     align-items: center;
