--- a/abstract/styles/large.css
+++ b/abstract/styles/large.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
     :root {
         --primary-color:#000000;
         --secondary-color:#fff;
@@ -10,6 +10,13 @@
         display: none;
     }
 
+
+
+    #buttons-container {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
     #sections {
         display: grid;
         grid-template-columns: 1fr 1fr;
@@ -33,6 +40,13 @@
         height: 70vh;
     }
 
+    .title {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        padding: 10px;
+        width: 35%;
+    }
 
     .links {
         display: flex;
