--- a/netflix/styles/netflix.css
+++ b/netflix/styles/netflix.css
@@ -10,34 +10,87 @@
     font-family: sans-serif;
 }
 
+
+.logo {
+    width: 170px;
+}
 .hero {
     background-image: url("../images/stranger.webp");
     height: 100vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    
+}
 
+.hero::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0,0,0, 0.8), rgba(0,0,0,0) 60%);
+    background-color: rgba(0,0,0, 0.4);
 }
 
 header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 1rem;
+    padding: 1px;
+    position: relative;
+    z-index: 2;
+    padding-left: 6rem;
+    padding-right: 6rem;
 }
 
+
 .mainer {
+    text-align: center;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
+
+.mainer h1 {
+    width: 50%;
+    font-size: 56px;
+    font-weight: 900;
+    line-height: 70px;
+}
+
+.slogan {
+    padding-top: 2px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: normal;
+}
+
+.hero-text {margin-top: 2rem; width: 50%;}
+.email-login {width: 50%; border: 5px solid white;}
+#email {width: 50%;}
 
 .red-button {
     background-color: var(--main-color);
     color: var(--font-color);
-    font-size: larger;
-    padding: 8px;
+    font-size: medium;
+    padding: 5px;
+    width: 8rem;
     border: 1px solid var(--main-color);
     border-radius: 8px;
+}
+
+main, footer {
+    background-color: var(--background-color);
+}
+
+.language {
+    background-color: var(--background-color);
+    border: 1px solid lightgrey;
+    font-size: medium;
+    padding: 5px;
+    width: 8rem;
+    border-radius: 2px;
 }
