--- a/netflix/styles/netflix.css
+++ b/netflix/styles/netflix.css
@@ -9,6 +9,7 @@
     color: var(--font-color);
     font-family: sans-serif;
     padding: 0;
+
 }
 
 
@@ -124,6 +125,7 @@ main {
 
 .poster {
     display: flex;
+    flex: 1 0 auto;
     width: 180px;
     height: 270px;
     flex-direction: column;
@@ -134,6 +136,9 @@ main {
 .poster-container {
     display: flex;
     flex-direction: row;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    overflow-x: auto;
 }
 
 .poster-image {
@@ -148,6 +153,29 @@ main {
     height: 88%;
 }
 
-.poster-number {
-    position: absolute;
+.scroll {
+    position: relative;
+    display: flex;
+    align-items: center;
 }
+
+.scroll-button {
+    background-color: rgba(0,0,0, 0.6);
+    color: var(--font-color);
+    border: none;
+    font-size: 2rem;
+    cursor: pointer;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+}
+
+.scroll-button left {
+    left: 0;
+}
+
+.scroll-button right {
+    right: 0;
+}
+
+
